# orchid-cli

./: .editorconfig  .gitignore  .gitlint  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
orchid_cli/: __init__.py  _output.py  bootstrap.py  main.py  slash_commands.py
orchid_cli/auth/: __init__.py  config.py  flow.py  middleware.py  oidc.py  pkce.py  token_store.py
orchid_cli/commands/: _tool_metadata.py  auth.py  chat.py  config.py  index.py  mcp.py  skill.py
tests/: conftest.py  test_auth.py  test_bootstrap.py  test_browser_opener.py  test_chat_builtin_slash.py  test_commands_chat.py  test_commands_config.py  test_commands_skill.py  test_middleware_seams.py  test_orchid_context_release.py  test_output.py  test_pkce.py  test_slash_commands.py  test_tool_metadata.py
tests/fixtures/: fake_tools_dates.py  fake_tools_math.py
