[project]
name = "orchid-cli"
version = "0.1.0"
description = "Orchid CLI — command-line interface for the Orchid agent framework"
requires-python = ">=3.11"
dependencies = [
    "orchid",
    "typer>=0.12.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "langchain-core>=0.3.0",
]

[project.scripts]
orchid = "orchid_cli.main:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
    "gitlint>=0.19.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchid_cli"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=orchid_cli --cov-report=term-missing"

# ── Semantic Release ─────────────────────────────────────────────

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): v{version} [skip ci]"
build_command = "pip install build && python -m build"
tag_format = "v{version}"

[tool.semantic_release.publish]
upload_to_vcs_release = true
dist_glob_patterns = ["dist/*"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
