[project]
name = "orchid-cli"
version = "1.0.5"
description = "Orchid CLI — command-line interface for the Orchid agent framework"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Francesco Marchesini", email = "gadz82@users.noreply.github.com" },
]
maintainers = [
    { name = "Francesco Marchesini", email = "gadz82@users.noreply.github.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Environment :: Console",
    "Typing :: Typed",
]
keywords = [
    "ai",
    "agents",
    "multi-agent",
    "cli",
    "langgraph",
    "rag",
    "mcp",
    "llm",
    "orchestration",
]
dependencies = [
    "orchid-ai>=1.3.0",
    "typer>=0.12.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "pydantic-settings>=2.7.0",
    "httpx>=0.28.0",
    "langchain-core>=0.3.0",
]

[project.scripts]
orchid = "orchid_cli.main:app"

[project.urls]
Homepage = "https://github.com/gadz82/orchid"
Repository = "https://github.com/gadz82/orchid"
Documentation = "https://github.com/gadz82/orchid#readme"
Issues = "https://github.com/gadz82/orchid/issues"
Changelog = "https://github.com/gadz82/orchid/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0",
    "ruff>=0.9.0",
    "gitlint>=0.19.0",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orchid_cli"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=orchid_cli --cov-report=term-missing"

# ── Semantic Release ─────────────────────────────────────────────

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): v{version} [skip ci]"
build_command = "pip install build && python -m build"
tag_format = "v{version}"

[tool.semantic_release.publish]
upload_to_vcs_release = true
dist_glob_patterns = ["dist/*"]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.commit_parser_options]
allowed_tags = ["feat", "fix", "perf", "refactor", "docs", "style", "test", "build", "ci", "chore"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
